--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@ button:active {
         </div>
     </div>
 
-<script src="script.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
